--- a/package.json
+++ b/package.json
@@ -11,15 +11,26 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.14",
+    "@angular/animations": "^8.2.14",
+    "@angular/cdk": "^8.0.0",
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
     "@angular/core": "~8.2.14",
     "@angular/forms": "~8.2.14",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "~8.2.14",
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
+    "@nebular/auth": "^4.6.0",
+    "@nebular/eva-icons": "4.6.0",
+    "@nebular/security": "^4.6.0",
+    "@nebular/theme": "^4.6.0",
+    "@tinymce/tinymce-angular": "^3.3.1",
+    "bootstrap": "4.3.1",
+    "eva-icons": "^1.1.2",
+    "hammerjs": "^2.0.8",
     "rxjs": "~6.4.0",
+    "save": "^2.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
@@ -28,10 +39,11 @@
     "@angular/cli": "~8.3.20",
     "@angular/compiler-cli": "~8.2.14",
     "@angular/language-service": "~8.2.14",
-    "@types/node": "~8.9.4",
+    "@schematics/angular": "~8.3.20",
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^5.0.0",
+    "@types/node": "~8.9.4",
+    "codelyzer": "^5.2.1",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
